# ESP32S3_Demo

./: README.md
1.Otherdemo/avi_player/: sdkconfig  sdkconfig.ft6xx  sdkconfig.n8r2  sdkconfig.n8r8  sdkconfig.old
1.Otherdemo/lvgl_v7/: CMakeLists.txt  sdkconfig  sdkconfig.old  sdkconfig.xpt2046
1.Otherdemo/lvgl_v8/: sdkconfig  sdkconfig copy  sdkconfig.old  sdkconfig.xpt2046
aht20/: CMakeLists.txt
aht20/main/: main.c
ble_hid_device_change/: README.chinese.md  sdkconfig
ble_hid_device_change/main/: ble_hidd_demo_main.c  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid_dev.h  hid_device_le_prf.c  hidd_le_prf_int.h
esp32_lvgl_100fps/: CMakeLists.txt  sdkconfig
esp32_lvgl_100fps/main/: CMakeLists.txt
esp32_lvgl_demo_100fps/main/: app_main.c
http_cam/: sdkconfig
http_cam/main/: main.c
ledc_pwm/main/: ledc_fade_example_main.c
lvgl_chumo_demo/: sdkconfig  sdkconfig.old
lvgl_chumo_demo/main/: CMakeLists.txt  main.c
lvgl_demo/: sdkconfig
lvgl_demo/main/: main.c
lvgl_png_jpg/: CMakeLists.txt  sdkconfig  sdkconfig.old
lvgl_png_jpg/main/: CMakeLists.txt  main.c
lvgl_v8_demo/: sdkconfig  sdkconfig.old
lvgl_v8_demo/main/: CMakeLists.txt  main.c
speak_wakeup/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig
speak_wakeup/main/: app_main.c  app_speech_rec.c
sta_ap/: CMakeLists.txt
sta_ap_ssid_form_web/: Makefile  sdkconfig
take_photo_show_lvgl/: CMakeLists.txt  sdkconfig  sdkconfig.bak
take_photo_show_lvgl_2/: sdkconfig  sdkconfig.old
take_photo_to_sdcard/: sdkconfig
web_location/: sdkconfig  sdkconfig.old
(+73 files in other folders)
