idf_component_register(SRCS "app_main.c" 
                            "../components/lvgl/demos/benchmark/lv_demo_benchmark.c" 
                            "../components/lvgl/demos/benchmark/assets/img_benchmark_cogwheel_alpha16.c" 
                            "../components/lvgl/demos/benchmark/assets/img_benchmark_cogwheel_argb.c" 
                            "../components/lvgl/demos/benchmark/assets/img_benchmark_cogwheel_chroma_keyed.c" 
                            "../components/lvgl/demos/benchmark/assets/img_benchmark_cogwheel_indexed16.c" 
                            "../components/lvgl/demos/benchmark/assets/img_benchmark_cogwheel_rgb.c" 
                            "../components/lvgl/demos/benchmark/assets/img_benchmark_cogwheel_rgb565a8.c" 
                            "../components/lvgl/demos/benchmark/assets/img_benchmark_cogwheel_alpha16.c" 

                    INCLUDE_DIRS "."
                    "../components/lvgl/demos/benchmark"
                    )